load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "proxy",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/hajime_center/proxy",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/common/logging",
        "//golangp/hajime_center/dify",
        "//golangp/hajime_center/initializers",
    ],
)
