load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "hajime_golang_test",
    srcs = glob(["**/*.go"]),
    importpath = "hajime/golangp/hajime_center/test",
    visibility = ["//visibility:public"],
    deps = [
        "//golangp/hajime_center/controllers",
        "@com_github_magiconair_properties//assert",
        "@com_github_sashabaranov_go_openai//:go_default_library",
    ],
)
